fix <pth>s overflowing parent

--- a/res/style.css
+++ b/res/style.css
@@ -73,45 +73,6 @@ subarticle {
   }
 }
 /* tables / lists */
-.twrapper {
-  display: inline-flex;
-  display: -webkit-inline-flex;
-  justify-content: center;
-  align-items: flex-start;
-  flex-wrap: wrap;
-}
-.twrapper ptable {
-  max-width: min-content;
-  margin: 5px;
-}
-/* Pseudo tables */
-ptable {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  background-color: #0f1c27;
-  max-width: fit-content;
-  border: 1px solid silver;
-  margin: auto;
-  margin-top: 10px;
-}
-pth {
-  grid-column: 1 / span 2;
-  border: 1px ridge silver;
-  padding: 5px;
-}
-ptd {
-  display: block;
-  border: 1px solid silver;
-  padding: 5px;
-  overflow-wrap: break-word;
-  font-size: 1.7rem;
-}
-ptd.key {
-  grid-column: 1;
-}
-ptd.val {
-  grid-column: 2;
-}
 .list-box-wrapper {
   background-color: #0f1c27;
   border: var(--border);
@@ -138,6 +99,45 @@ item {
   display: inline-block;
   border-top: var(--border);
   padding: 5px;
+}
+.twrapper {
+  display: inline-flex;
+  display: -webkit-inline-flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
+.twrapper ptable {
+  margin: 5px;
+}
+/* Pseudo tables */
+ptable {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  background-color: #0f1c27;
+  max-width: fit-content;
+  border: 1px solid silver;
+  margin: auto;
+  margin-top: 10px;
+}
+pth {
+  grid-column: 1 / span 2;
+  border: 1px solid silver;
+  overflow-wrap: break-word;
+  padding: 5px;
+}
+ptd {
+  display: block;
+  border: 1px solid silver;
+  padding: 5px;
+  overflow-wrap: break-word;
+  font-size: 1.7rem;
+}
+ptd.key {
+  grid-column: 1;
+}
+ptd.val {
+  grid-column: 2;
 }
 /* Text */
 h1 {
